--- a/config.json
+++ b/config.json
@@ -1,25 +1,15 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "LiveTerm",
-  "name": "John Doe",
-  "ascii": "liveterm",
-  "social": {
-    "humpty": "humpty",
-    "babadook": "babadook"
-  },
-  "email": "contact@email.com",
-  "ps1_hostname": "liveterm",
+  "title": "Johnarchive.net",
+  "name": "Johnarchive.net",
+  "ascii": "Johnarchive.net",
+  "email": "gsdf42931@gmail.com",
+  "ps1_hostname": "Johnarchive.net",
   "ps1_username": "visitor",
-  "repo": "https://github.com/Cveinnt/LiveTerm",
-  "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
-  "donate_urls": {
-    "paypal": "https://paypal.me/cveinnt",
-    "patreon": "https://patreon.com/cveinnt"
-  },
   "colors": {
     "light": {
-      "background": "#FBF1C9",
-      "foreground": "#3C3836",
+      "background": "#262626",
+      "foreground": "#00bf33",
       "yellow": "#D79921",
       "green": "#98971A",
       "gray": "#7C6F64",
@@ -27,8 +17,8 @@
       "red": "#CA2124"
     },
     "dark": {
-      "background": "#2E3440",
-      "foreground": "#E5E9F0",
+      "background": "#262626",
+      "foreground": "#00bf33",
       "yellow": "#5E81AC",
       "green": "#A3BE8C",
       "gray": "#88C0D0",
