--- a/config.json
+++ b/config.json
@@ -1,15 +1,25 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "Johnarchive.net",
-  "name": "Johnarchive.net",
-  "ascii": "Johnarchive.net",
-  "email": "gsdf42931@gmail.com",
-  "ps1_hostname": "Johnarchive.net",
+  "title": "ohnarchive.net",
+  "name": "ohnarchive.net",
+  "ascii": "ohnarchive.net",
+  "social": {
+    "github": "github",
+    "linkedin": "linkedin"
+  },
+  "email": "contact@email.com",
+  "ps1_hostname": "liveterm",
   "ps1_username": "visitor",
+  "repo": "https://github.com/Cveinnt/LiveTerm",
+  "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
+  "donate_urls": {
+    "paypal": "https://paypal.me/cveinnt",
+    "patreon": "https://patreon.com/cveinnt"
+  },
   "colors": {
     "light": {
-      "background": "#262626",
-      "foreground": "#00bf33",
+      "background": "#FBF1C9",
+      "foreground": "#3C3836",
       "yellow": "#D79921",
       "green": "#98971A",
       "gray": "#7C6F64",
@@ -17,8 +27,8 @@
       "red": "#CA2124"
     },
     "dark": {
-      "background": "#262626",
-      "foreground": "#00bf33",
+      "background": "#2E3440",
+      "foreground": "#E5E9F0",
       "yellow": "#5E81AC",
       "green": "#A3BE8C",
       "gray": "#88C0D0",
