--- a/config.json
+++ b/config.json
@@ -18,8 +18,8 @@
   },
   "colors": {
     "light": {
-      "background": "#FBF1C9",
-      "foreground": "#3C3836",
+      "background": "#262626",
+      "foreground": "#00bf33",
       "yellow": "#D79921",
       "green": "#98971A",
       "gray": "#7C6F64",
@@ -27,8 +27,8 @@
       "red": "#CA2124"
     },
     "dark": {
-      "background": "#2E3440",
-      "foreground": "#E5E9F0",
+      "background": "#262626",
+      "foreground": "#00bf33",
       "yellow": "#5E81AC",
       "green": "#A3BE8C",
       "gray": "#88C0D0",
