--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "ohnarchive.net",
-  "name": "ohnarchive.net",
-  "ascii": "ohnarchive.net",
+  "title": "Johnarchive.net",
+  "name": "Johnarchive.net",
+  "ascii": "Johnarchive.net",
   "social": {
     "github": "github",
     "linkedin": "linkedin"
